Fix invisible currency toggle button (#146)
The info window color was the same as the font color for the button which toggled currencies.

--- a/src/css/base.scss
+++ b/src/css/base.scss
@@ -67,7 +67,7 @@ $themes: (
     primary: #00ff00,
     secondary: #00ff00,
     dark: #000,
-    info: #00ff00,
+    info: #1b1b1b,
     marginal-bg: #000,
     marginal-text: rgb(255, 255, 255),
   ),
